# channels

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  appveyor.yml  patchinator.py  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: tests.yml
channels/: __init__.py  apps.py  auth.py  channel.py  consumer.py  consumer_registry.py  db.py  decorators.py  delay.py  exceptions.py  hacks.py  handler.py  http.py  layers.py  log.py  message.py  middleware.py  origin_validation.py  package_checks.py  request.py  response.py  routing.py  sessions.py  shortcuts.py  signals.py  staticfiles.py  typing.py  utils.py  worker.py
channels/backends/: __init__.py  database.py  memory.py  redis_py.py
channels/binding/: base.py  websockets.py
channels/delay/: models.py  worker.py
channels/delay/management/commands/: rundelay.py
channels/delay/migrations/: 0001_initial.py
channels/generic/: base.py  demultiplexer.py  http.py  mixins.py  multiplexer.py  websocket.py  websockets.py
channels/generic/websocket/: __init__.py  basic.py  multiplex.py
channels/interfaces/: http_twisted.py  websocket_asyncio.py  websocket_twisted.py  wsgi.py
channels/management/commands/: rundelay.py  runserver.py  runworker.py  runwsserver.py
channels/scheduler/: __init__.py  apps.py  django_jobstore.py  forms.py  models.py  validators.py  worker.py
channels/scheduler/management/commands/: runscheduler.py
channels/scheduler/migrations/: 0001_initial.py  0002_auto_20170223_2215.py  0003_auto_20170225_2046.py
channels/security/: websocket.py  websockets.py
channels/static/channels/js/: websocketbridge.js
channels/test/: __init__.py  base.py  http.py  liveserver.py  websocket.py
channels/testing/: __init__.py  application.py  base.py  http.py  live.py  websocket.py
channels/tests/: __init__.py  base.py  http.py  settings.py  test_backends.py  test_binding.py  test_delay.py  test_generic.py  test_handler.py  test_http.py  test_liveserver.py  test_management.py  test_scheduler.py  test_sessions.py  test_worker.py
ci/: toxmatch.py
docs/: Makefile  asgi.rst  backends.rst  binding.rst  channel_layer_spec.rst  community.rst  concepts.rst  conf.py  contributing.rst  delay.rst  deploying.rst  faqs.rst  generics.rst  getting-started.rst  index.rst  installation.rst  introduction.rst  javascript.rst  make.bat  one-to-two.rst  reference.rst  support.rst  testing.rst
docs/asgi/: www.rst
docs/includes/: asgi_example.rst
docs/releases/: 1.0.0.rst  1.1.0.rst  2.0.0.rst  2.3.0.rst  3.0.0.rst  3.0.1.rst  3.0.2.rst  3.0.3.rst  3.0.4.rst  3.0.5.rst  4.0.0.rst  4.0.0.txt  4.1.0.rst  4.2.0.rst  4.2.1.txt  4.2.2.rst  4.3.0.rst  4.3.1.rst  4.3.2.rst  index.rst
docs/topics/: authentication.rst  channel_layers.rst  consumers.rst  databases.rst  routing.rst  security.rst  sessions.rst  testing.rst  troubleshooting.rst  worker.rst
docs/tutorial/: index.rst  part_1.rst  part_2.rst  part_3.rst  part_4.rst
js_client/: README.md  package.json
js_client/lib/: index.js
js_client/src/: index.js
js_client/tests/: websocketbridge.test.js
loadtesting/: README.md  README.rst
loadtesting/2016-09-06/: README.rst
loadtesting/2025-11-29/: README.rst
testproject/: README.rst  benchmark.py  fabfile.py  setup.py
testproject/chtest/: consumers.py  views.py
testproject/chtest/templates/chtest/: base.html  group.html
testproject/testproject/: asgi_for_ipc.py  asgi_inmemory.py  asgi_ipc.py  settings.py  urls.py  urls_no_channels.py  wsgi.py
testproject/testproject/settings/: base.py  chanels_inmemory.py  channels.py  channels_inmemory.py  channels_ipc.py  channels_rabbitmq.py
tests/: conftest.py  settings.py  test_binding.py  test_database.py  test_db.py  test_delay.py  test_demultiplexer.py  test_deprecations.py  test_generic.py  test_generic_http.py  test_generic_websocket.py  test_http.py  test_http_stream.py  test_inmemorychannel.py  test_layers.py  test_live_testcase.py  test_liveserver.py  test_management.py  test_multiplexer.py  test_origin_validation.py  test_routing.py  test_sessions.py  test_shortcuts.py  test_staticfiles.py  test_testing.py  test_utils.py  test_websocket_multiplex.py  test_worker.py  test_wsclient.py
tests/generic/: test_websocket_multiplex.py
tests/sample_project/config/: asgi.py  settings.py  urls.py  wsgi.py
tests/sample_project/sampleapp/: admin.py  apps.py  consumers.py  models.py
tests/sample_project/sampleapp/migrations/: 0001_initial.py
tests/sample_project/sampleapp/static/sampleapp/css/: styles.css
tests/sample_project/sampleapp/static/sampleapp/js/: scripts.js
tests/sample_project/sampleapp/templates/admin/sampleapp/message/: change_list.html
tests/sample_project/tests/: selenium_mixin.py  test_selenium.py
tests/security/: test_auth.py  test_websocket.py
tests/test_example/: README.rst  manage.py  pytest.ini  requirements.txt
tests/test_example/chat/: apps.py  consumers.py  tests.py  utils.py
tests/test_example/chat/templates/: base.html  index.html
tests/test_example/myproject/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
tests/testproject/: asgi.py  settings.py  urls.py  wsgi.py
