[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "channels"
description = "Brings async, event-driven capabilities to Django. Django 2.2 and up only."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "BSD"}
authors = [{name = "Django Software Foundation", email = "foundation@djangoproject.com"}]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Framework :: Django',
    'Topic :: Internet :: WWW/HTTP',
]
dependencies = [
    'Django>=2.2',
    'asgiref>=3.5.0,<4',
    'daphne>=3.0,<4',
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-django",
    "pytest-asyncio",
    "async-timeout",
    "coverage~=4.5",
]

[project.urls]
Home = "http://github.com/django/channels"
