[metadata]
name = channels
version = attr: channels.__version__
url = https://github.com/django/channels
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = Brings async, event-driven capabilities to Django. Django 2.2 and up only.
long_description = file: README.rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
install_requires =
    Django >= 2.2
    asgiref ~= 3.2
    daphne ~= 2.3

[options.packages.find]
exclude =
    tests

[options.extras_require]
tests =
    pytest
    pytest-django
    pytest-asyncio
    async_generator
    async-timeout
    coverage ~= 4.5

[flake8]
exclude = venv/*,tox/*,docs/*,testproject/*,build/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
include_trailing_comma = True
known_third_party = django
known_first_party = channels,daphne,asgiref
multi_line_output = 3
line_length = 88
force_grid_wrap=0
use_parentheses=True

[tool:pytest]
testpaths = tests
