[metadata]
name = channels
version = attr: channels.__version__
url = http://github.com/django/channels
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = Brings async, event-driven capabilities to Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=4.2
    asgiref>=3.6.0,<4
python_requires = >=3.8

[options.extras_require]
tests =
    async-timeout
    coverage~=4.5
    pytest
    pytest-django
    pytest-asyncio
daphne =
    daphne>=4.0.0

[options.packages.find]
exclude =
    tests

[flake8]
exclude = venv/*,tox/*,docs/*,testproject/*,build/*
max-line-length = 88
extend-ignore = E203, W503

[isort]
profile = black

[tool:pytest]
testpaths = tests
asyncio_mode = auto
